# mcworldlib

./: .gitignore  README.md  TODO.txt  decode_long.txt  pyproject.toml  setup.cfg  setup.py
data/: c.-96.-8.mcc  chunk_entities_r.-1.-1_16,15.nbt  chunk_region_r.-1.0_0,31.nbt  r.0.6.mca  r.0.7.mca  r.5.4.mca
data/New World/: level.dat_old
data/New World/advancements/: 8b4accb8-d952-4050-97f2-e00c4423ba92.json
data/New World/entities/: r.-1.-1.mca  r.-1.0.mca  r.-2.-1.mca  r.-2.0.mca  r.0.-1.mca  r.0.0.mca
data/New World/region/: r.-2.-1.mca  r.-2.0.mca  r.0.-1.mca  r.0.0.mca
data/New World/stats/: 8b4accb8-d952-4050-97f2-e00c4423ba92.json
mcworldlib/: __init__.py  anvil.py  chunk.py  cli.py  entity.py  level.py  logger.py  lz4_java.py  nbt.py  player.py  region.py  tree.py  util.py  world.py
tests/: bench_tests.py  blocks.py  tests.py  tree.py
