[metadata]
name = MCWorldLib
version = 0.2019.12
author = Rodrigo Silva (MestreLion)
author_email = minecraft@rodrigosilva.com
description = Yet another python library to manipulate Minecraft save data
long_description = file: README.md
long_description_content_type = 'text/markdown'
keywords =
    minecraft
    save
    nbt
    chunk
    region
    world
    library
url = https://github.com/MestreLion/mcworldlib
project_urls = 
    Bug Tracker = https://github.com/MestreLion/mcworldlib/issues
    Source Code = https://github.com/MestreLion/mcworldlib
license = GPLv3+
classifiers = 
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Topic :: Games/Entertainment
    Topic :: Software Development :: Libraries :: Python Modules
packages = find:
include_package_data = true

[options]
install_requires =
    nbtlib
    tqdm
    importlib; python_version == ">=3.6"

[options.package_data]
* = *.md, LICENSE*