[metadata]
name = mcworldlib
version = 0.2021.09
author = Rodrigo Silva (MestreLion)
author_email = minecraft@rodrigosilva.com
description = Yet another python library to manipulate Minecraft save data
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3+
license_files = LICENSE
keywords =
    minecraft
    save
    nbt
    chunk
    region
    world
    library
url = https://github.com/MestreLion/mcworldlib
project_urls =
    Bug Tracker = https://github.com/MestreLion/mcworldlib/issues
    Source Code = https://github.com/MestreLion/mcworldlib
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Games/Entertainment
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
include_package_data = true
python_requires = >=3.6
install_requires =
    nbtlib <= 1.6.3
    numpy
    tqdm

[options.package_data]
* = *.md, LICENSE*
